# email-validator

./: INSTALL.md  package-lock.json  package.json  pyproject.toml  requirements-base.txt  requirements.txt  setup.py
config/: config.json
data/: disposable_domains.json
scripts/: install.bat  install_ubuntu.sh  install_windows.ps1  setup.bat  setup.sh  start_api.bat  start_gui.bat  ubuntu_install.sh
src/: __init__.py  main.py
src/__pycache__/: __init__.rustpython-01.pyc.21267328  __init__.rustpython-01.pyc.22590080  main.rustpython-01.pyc.20040352  main.rustpython-01.pyc.20144640  main.rustpython-01.pyc.22593552
src/analytics/: report_generator.py  validation_analyzer.py  visualization_generator.py
src/api/: main.py  models.py
src/batch/: batch_processor.py
src/cache/: cache_config.py  cache_key_builder.py  cache_manager.py  cache_metrics.py  cache_store.py
src/config/: settings.py
src/gui/: __init__.py  drag_drop_widget.py  main_window.py  progress_widget.py  results_widget.py  validation_options_widget.py
src/preprocessing/: batch_deduplicator.py  deduplicator.py  email_cleaner.py  format_validator.py  preprocessor.py
src/utils/: __init__.py  cache.py  file_handler.py  logger.py  rate_limiter.py  report_generator.py  settings_manager.py  stats_collector.py
src/validators/: __init__.py  ai_validator.py  behavior_analyzer.py  catchall_detector.py  content_analyzer.py  disposable_detector.py  domain_validator.py  duplicate_detector.py  email_validator.py  format_validator.py  pattern_validator.py  role_validator.py  (+5 more)
tests/: test_email_validator.py
(+36 files in other folders)
