[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-validator"
version = "1.0.0"
description = "A comprehensive email validation system"
requires-python = ">=3.9"
authors = [
    {name = "Email Validator Team"}
]

[tool.setuptools]
packages = ["src"]